--- a/Community Material Theme/userstyle.css
+++ b/Community Material Theme/userstyle.css
@@ -165,8 +165,9 @@ td {
   color: var(--dark) !important;
 }
 
-mark {
+mark, mark strong {
   background: var(--yellow) !important;
+  color: var(--dark) !important;
 }
 
 /* Highlighted searched item */
